# kubemind

./: .dockerignore  .env.example  .gitignore  Justfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ai/: __init__.py  agent.py  llm.py  prompts.py  tools.py
ai/tools/: __init__.py
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: __init__.py  architecture.py  auth.py  auth_deps.py  clusters.py  dashboard.py  deployments.py  deps.py  health.py  query.py  sync.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: README.md  env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py  0002_cluster_integration_urls.py  0003_incidents.py  0004_queries_investigations.py  0005_deployments_config_changes.py  0006_services_dependencies.py
backend/app/models/: __init__.py  cluster.py  config_change.py  dependency.py  deployment.py  incident.py  investigation.py  mixins.py  organization.py  query.py  service.py  user.py
backend/app/schemas/: architecture.py  auth.py  cluster.py  dashboard.py  deployment.py  query.py
backend/app/services/: architecture_service.py  auth_service.py  cluster_service.py  dashboard_service.py  query_service.py  sync_service.py
frontend/: .dockerignore  Dockerfile  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/architecture/: page.tsx
frontend/src/app/deployments/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/query/: page.tsx
frontend/src/components/: architecture-page.tsx  auth-form.tsx  dashboard-content.tsx  dashboard-details.tsx  deployments-page.tsx  health-banner.tsx  query-panel.tsx
frontend/src/stores/: auth-store.ts
infra/helm/kubemind/: Chart.yaml  values.yaml
infra/helm/kubemind/templates/: _helpers.tpl  backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  postgres-statefulset.yaml  redis-statefulset.yaml  secret.yaml  worker-deployment.yaml
integrations/: __init__.py  argocd.py  base.py  grafana.py  k8s.py  prometheus.py
tests/: conftest.py
tests/integration/: conftest.py  test_architecture.py  test_auth_flow.py  test_dashboard.py  test_query.py  test_sync.py
tests/unit/: fake_llm.py  test_agent.py  test_architecture.py  test_health.py  test_health_score.py  test_sync_helpers.py
