[project]
name = "kubemind"
version = "0.1.0"
description = "AI Operations Intelligence Platform for Kubernetes"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [{name = "Erfan Momeni"}]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23",
    "starlette>=0.41",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis[hiredis]>=5.2",
    "httpx>=0.28",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "authlib>=1.4",
    "structlog>=24.4",
    "opentelemetry-api>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49",
    "opentelemetry-instrumentation-httpx>=0.49",
    "opentelemetry-instrumentation-asyncpg>=0.49",
    "opentelemetry-exporter-otlp>=1.28",
    "prometheus-client>=0.21",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "kubernetes>=31",
    "prometheus-api-client>=0.5",
    "pgvector>=0.3",
    "rq>=1.16",
    "rq-scheduler>=0.14",
    "typer>=0.13",
    "python-multipart>=0.0.12",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "testcontainers[postgres,redis]>=4.8",
    "factory-boy>=3.3",
    "respx>=0.21",
    "vcrpy>=6.0",
    "types-passlib",
    "types-python-jose",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app", "ai", "integrations"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TID"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["kubernetes.*", "prometheus_api_client.*", "rq.*", "rq_scheduler.*", "factory.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated tests",
    "integration: tests with real services via testcontainers",
    "e2e: end-to-end tests",
]

[tool.coverage.run]
source = ["backend/app", "ai", "integrations"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
